# DiveIntoSystems

./: CMakeLists.txt  README.md  functions.c  string_examples.c  struct_demo.c  test_array.c
Chapter1/: lvalues_demo.c  passing_structs_to_functions.c
Chapter2/: arraysofstructs.c  commandlineargs.c  dynamicstringallocation.c  dynamicstructusage.c  filereadingexample.c  filereadingexample02.c  individualcharfunctions.c  local_and_global_variables.c  mallocexample.c  method1dynamicmulti.c  method2dynamicmulti.c  multidimensionalarray.c  passbypointer.c  pointerarith.c  printf_format.c  scanf_ex.c  selfreferentialstructs.c  sprintfexample.c  stringExample.c  stringlibraryexample01.c  stringlibraryexample02.c  strtokexample.c  struct_review.c  structswithpointerfields.c  switchexample.c  voidthreadingexample.c
Chapter2/assembly/: simpleops.c  simpleops.s
Chapter2/assembly/writing/: main.c  myfunc.s
Chapter3/: attach_example.c  bigfish.c  output.txt  output2.txt  racecond.c  valgrindbadprog.c
Chapter4/: integer_byte_order.c  right_shift.c
Chapter6/: example.c
Chapter7/: adder.c  prog  prog.c  progOutput
Chapter7/bufferOverflow/: main.c  main2.c
Chapter8/: modified.c
