cmake_minimum_required(VERSION 3.30)
project(DiveIntoSystems C)

set(CMAKE_C_STANDARD 23)

add_executable(DiveIntoSystems main.c)

add_executable(Functions Chapter1/functions.c)
add_executable(TestArray Chapter1/test_array.c)
add_executable(StringExamples Chapter1/string_examples.c)
add_executable(StructDemo Chapter1/struct_demo.c)
add_executable(LValuesDemo Chapter1/lvalues_demo.c)
add_executable(StructsToFunctions Chapter1/passing_structs_to_functions.c)

add_executable(LocalAndGlobalVariables Chapter2/local_and_global_variables.c)
add_executable(PassByPointer Chapter2/passbypointer.c)
add_executable(MallocExample Chapter2/mallocexample.c)
add_executable(MultiDimensionalArray Chapter2/multidimensionalarray.c)
add_executable(Method1DynamicMultiDimenArray Chapter2/method1dynamicmulti.c)
add_executable(Method2DynamicMultiDimenArray Chapter2/method2dynamicmulti.c)
add_executable(StringExample Chapter2/stringExample.c)
add_executable(DynamicStringAllocation Chapter2/dynamicstringallocation.c)
add_executable(StringLibrary01 Chapter2/stringlibraryexample01.c)
add_executable(StringLibrary02 Chapter2/stringlibraryexample02.c)
add_executable(StrtokExample Chapter2/strtokexample.c)
add_executable(SprintfExample Chapter2/sprintfexample.c)
add_executable(IndividualCharacterFunctions Chapter2/individualcharfunctions.c)
add_executable(StructReview Chapter2/struct_review.c)
add_executable(DynamicStructUsage Chapter2/dynamicstructusage.c)
add_executable(StructsWithPointerValues Chapter2/structswithpointerfields.c)
add_executable(ArraysOfStructs Chapter2/arraysofstructs.c)
add_executable(SelfReferentialStructs Chapter2/selfreferentialstructs.c)
add_executable(PrintfFormat Chapter2/printf_format.c)
add_executable(ScanfExample Chapter2/scanf_ex.c)
add_executable(FileReadingExample Chapter2/filereadingexample.c)
add_executable(FileReadingExample02 Chapter2/filereadingexample02.c)
add_executable(SwitchExample Chapter2/switchexample.c)
add_executable(CommandLineArgs Chapter2/commandlineargs.c)
add_executable(VoidThreadingExample Chapter2/voidthreadingexample.c)
add_executable(PointerArithmetic Chapter2/pointerarith.c)
add_library(TestLibrary Chapter2/library/mylib.h
        Chapter2/library/mylib.c)
add_executable(MyProg Chapter2/library/myprog.c)
add_executable(SimpleOps Chapter2/assembly/simpleops.c)
add_executable(AssemblyTestingMain Chapter2/assembly/writing/main.c)
add_executable(BigFish Chapter3/bigfish.c)
add_executable(ValgrindBadProgram Chapter3/valgrindbadprog.c)
add_executable(AttachExample Chapter3/attach_example.c)
add_executable(RaceCondition Chapter3/racecond.c)
add_executable(RightShift Chapter4/right_shift.c)
